# tetaconverter

./: .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  features.md  options.json  package.json  railway.toml  setup.txt
.github/workflows/: release.yml
build-scripts/: convert.py
docs/: longtail-seo-keywords.csv
docs/hybrid/: hybrid-mode-design.md  hybrid-mode-tasks.md
docs/superpowers/plans/: 2026-04-18-hancom-ai-mock-server.md  2026-04-29-hybrid-hancom-ai-options.md
docs/superpowers/specs/: 2026-04-29-hybrid-hancom-ai-options-design.md
examples/python/batch/: requirements.txt
examples/python/rag/: requirements.txt
java/: pom.xml
java/opendataloader-pdf-core/: pom.xml
node/opendataloader-pdf/: package.json  pnpm-lock.yaml  tsconfig.json
node/opendataloader-pdf/src/: cli-options.generated.ts  cli.ts  convert-options.generated.ts  index.ts
node/opendataloader-pdf/test/: executeJar.unit.test.ts  streaming.integration.test.ts
python/opendataloader-pdf/: hatch_build.py  pyproject.toml
python/opendataloader-pdf-mcp/: pyproject.toml
python/opendataloader-pdf/src/opendataloader_pdf/: cli_options_generated.py  convert_generated.py  hybrid_server.py  runner.py
python/opendataloader-pdf/tests/: test_hybrid_server_ocr_options.py  test_hybrid_server_partial_success.py  test_hybrid_server_picture_description.py  test_runner.py
scripts/: build-python.sh  generate-options.mjs  generate-schema.mjs  run-cli.sh  verify-python-sdist.sh
ui-template/stitch_modern_flat_blog_interface/teta_converter_blog_listing/: code.html
web/: README.md  blog_auth.py  blog_db.py  blog_routes.py  converter.py  pdf_tools.py  rate_limiter.py  requirements.txt  server.py
web/static/: blog.css  index.html  pdf-tools.html
web/templates/: admin_login.html  admin_post_form.html  admin_posts.html  blog_category.html  blog_list.html  blog_post.html  blog_tag.html
(+88 files in other folders)
