[project]
name = "opendataloader-pdf"
version = "0.0.0"
description = "A Python wrapper for the opendataloader-pdf Java CLI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "opendataloader-project", email = "open.dataloader@hancom.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
hybrid = [
    "docling[easyocr]>=2.91.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "python-multipart>=0.0.28",
]

[project.scripts]
opendataloader-pdf = "opendataloader_pdf.wrapper:main"
opendataloader-pdf-hybrid = "opendataloader_pdf.hybrid_server:main"

[project.urls]
Homepage = "https://github.com/opendataloader-project/opendataloader-pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Shared by wheel and sdist: force-include gitignored build outputs
# (JAR, LICENSE, NOTICE, THIRD_PARTY) that hatch_build.py copies at build time.
[tool.hatch.build]
artifacts = [
    "src/opendataloader_pdf/jar/*.jar",
    "src/opendataloader_pdf/LICENSE",
    "src/opendataloader_pdf/NOTICE",
    "src/opendataloader_pdf/THIRD_PARTY/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opendataloader_pdf"]

[tool.hatch.build.targets.sdist]
include = [
    "src/opendataloader_pdf/**",
    "README.md",
    "hatch_build.py",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.uv]
package = true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
